Comparison between 2020 and 2024

--- a/nlab_clean.ipynb
+++ b/nlab_clean.ipynb
@@ -20,14 +20,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "18664"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All pages: 19246\n",
+      "Filtered pages: 18516\n"
+     ]
     }
    ],
    "source": [
@@ -41,11 +39,12 @@
     "    \"EMPTY\",\n",
     ")\n",
     "\n",
-    "cd(\"/NetMath/nlab/data\")\n",
+    "cd(\"/NetMath/nLab/data\")\n",
     "pages = open(JSON.parse,\"2024/nlab_scrape.json\",\"r\")\n",
+    "print(\"All pages: \", length(pages),\"\\n\")\n",
     "filter!(page -> page[\"name\"] ∉ skip_pages, pages)\n",
     "pages = Dict(pop!(page, \"name\") => page for page in pages)\n",
-    "length(pages)\n",
+    "print(\"Filtered pages: \", length(pages),\"\\n\")\n",
     "\n"
    ]
   },
@@ -123,7 +122,7 @@
     "        !any(startswith(lstrip(line), prefix)\n",
     "             for prefix in (\"+--\", \"=--\", \"{:\", \"{#\", \"[[!\"))\n",
     "    end, \"\\n\")\n",
-    "    replace(s, r\"{#(.*?)}\" => \"\")\n",
+    "    s = replace(s, r\"{#(.*?)}\" => \"\")   \n",
     "end\n",
     "\n",
     "\"\"\" Replace wiki page links with plain text.\n",
@@ -134,8 +133,8 @@
     "    # Links of form [[page name]]\n",
     "    s = replace(s, r\"\\[\\[(.*?)\\]\\]\" => s\"\\1\")\n",
     "end\n",
-    "\n",
-    "nlab_to_plain(source) = source |> strip_wiki_commands |> replace_page_links |>\n",
+    "    \n",
+    "nlab_to_plain(source) = source |> strip_wiki_commands |> replace_page_links |> \n",
     "    markdown_to_plain |> strip_latex_math "
    ]
   },
@@ -155,7 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:19:26\u001b[39m\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:15:41\u001b[39m\n",
       "\u001b[34m  name:  formal deformation quantization\u001b[39m\n"
      ]
     }
@@ -173,21 +172,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "open(\"nlab_clean.json\", \"w\") do clean\n",
-    "    cnt = 0     \n",
+    "    println(clean, \"[\")\n",
     "    for (name, page) in pairs(pages)\n",
-    "        if cnt > 0\n",
-    "            JSON.println(clean, \"PAGINATE\")\n",
-    "        end\n",
-    "        pg = \"page = \" * name\n",
-    "        JSON.println(clean, pg)\n",
-    "        cnt += 1\n",
-    "        JSON.println(clean, page[\"plain\"])  \n",
+    "        println(clean, \"  {\")\n",
+    "        rec = page[\"plain\"]\n",
+    "        rec = replace(rec, r\"(\\r\\n|\\n|\\r)\" => \" \")\n",
+    "        rec = replace(rec, r\"\\s+\" => \" \")\n",
+    "        rec = replace(rec, r\"-\" => \" \")        \n",
+    "        println(clean, \"    \\\"context\\\": \\\"$rec\\\",\")\n",
+    "        println(clean, \"    \\\"title\\\": \\\"$name\\\"\")\n",
+    "        println(clean, \"  },\")      \n",
     "    end\n",
+    "    println(clean, \"]\")    \n",
     "end"
    ]
   },
